# EWD---Eksploracja-i-Wizualizacja-Danych

./: README.md  notebookd73181dcfe.ipynb  pyproject.toml
03_12_25/tutorial/: Lab - Dane (dodatkowe).ipynb  Lab - Dane.ipynb
03_12_25/zadania/: Zad2.ipynb  Zad3.ipynb
03_26_25/zadania/: Zad1.ipynb  Zad2.ipynb
04_02_25/: Lab - Dane 2.ipynb
04_02_25/zadania/: Zad1.ipynb  Zad2.ipynb  Zad3.ipynb  Zad4.ipynb
04_09_25/: Lab - Modelowanie.ipynb
04_09_25/zadania/: Zad1.ipynb  Zad2.ipynb
04_16_25/: Lab - Regresja Liniowa.ipynb  Zad1.ipynb
04_23_25/: Lab - Regresja Liniowa.ipynb  Zad1.ipynb
04_30_25/: Lab - Klasyfikacja.ipynb
04_30_25/zadania/: Zad1.ipynb  Zad2.ipynb
05_03_25/tutorial/: Lab - Numpy, Pandas.ipynb
05_03_25/zadania/: Zad1.ipynb  Zad2.ipynb
05_07_25/: Lab -  Klasyfikacja 2.ipynb  Zad1.ipynb
05_14_25/: Lab - Klasyfikacja 3.ipynb
05_14_25/zadania/: Zad1.ipynb  Zad2.ipynb
05_21_25/: Lab - Drzewa.ipynb
05_21_25/zadania/: Zad1.ipynb  Zad2.ipynb
06_04_25/: Lab - Grupowanie.ipynb  Lab - Selekcja modelu, regularyzacja.ipynb  README.md
06_04_25/data/: Hitters.csv
06_04_25/zadania/: Zad1_Grupowanie.ipynb  Zad1_Selekcja.ipynb  Zad2_Selekcja.ipynb  Zad3_Selekcja.ipynb
12_03_25/zadania/: Zad1.ipynb  Zad3.ipynb
26_03_25/: Lab - Wizualizacja.ipynb
26_03_25/data/: SP500.csv  waw_weather_monthly.csv  world_bank_co2.csv
26_03_25/zadania/: Zad3.ipynb  Zad4.ipynb
Projekt_Koncowy/: Projekt_Koncowy.ipynb
