[tool.poetry]
name = "ewd-eksploracja-i-wizualizacja-danych"
version = "0.1.0"
description = ""
authors = ["Tomasz Serafiński <work.serafinski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.3"
requests = "^2.32.3"
bs4 = "^0.0.2"
matplotlib = "^3.10.1"
notebook = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
